# oursql

./: .clang-format  .gitignore  CMakeLists.txt  DOC.md  README.md
.github/workflows/: tests.yml
App/: CMakeLists.txt  Our.cpp  Our.h  main.cpp
App/Core/: DataType.cpp  DataType.h  Exception.cpp  Exception.h
App/Engine/: Block.cpp  Block.h  Column.cpp  Column.h  Cursor.cpp  Cursor.h  Engine.cpp  Engine.h  Field.cpp  Field.h  Table.cpp  Table.h  Value.h
App/Exceptions/: QueryException.cpp  QueryException.h
App/Logic/: Field.cpp  Field.h  QueryManager.cpp  QueryManager.h  Reciever.cpp  Reciever.h  Table.cpp  Table.h  TableManager.cpp  TableManager.h  Types.h
App/Logic/Conditions/: ConditionChecker.cpp  ConditionChecker.h
App/Logic/Parser/: ParserManager.cpp  ParserManager.h  parser.y  scanner.l
App/Logic/Parser/ExpressionParser/: Resolver.cpp  Resolver.h
App/Logic/Parser/Nodes/: Command.cpp  Command.h  Condition.cpp  Condition.h  Constant.cpp  Constant.h  ConstantList.h  Expression.h  Ident.cpp  Ident.h  IdentList.h  IntConstant.cpp  IntConstant.h  Node.h  NullConstant.h  Query.cpp  Query.h  RealConstant.h  Relation.cpp  Relation.h  SelectList.cpp  SelectList.h  TextConstant.cpp  TextConstant.h  VarList.cpp  VarList.h  Variable.cpp  Variable.h
Client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
Server/: CMakeLists.txt  Our.cpp  Our.h  Server.cpp  Server.h  main.cpp
Server/Core/: DataType.cpp  DataType.h  Exception.h
Server/Engine/: Block.cpp  Block.h  BuffersManager.cpp  BuffersManager.h  ChangeManager.cpp  ChangeManager.h  Column.cpp  Column.h  Cursor.cpp  Cursor.h  Engine.cpp  Engine.h  Index.h  IndexesManager.cpp  IndexesManager.h  Table.cpp  Table.h
Server/Logic/: QueryManager.cpp  QueryManager.h  TransactionManager.cpp  TransactionManager.h
Server/Logic/Calendar/: DateManager.h
Server/Logic/Conditions/: ConditionChecker.h
Server/Logic/Parser/: ParserManager.cpp  ParserManager.h  parser.y  scanner.l
Server/Logic/Parser/ExpressionParser/: Resolver.cpp  Resolver.h
Server/Logic/Parser/Nodes/: Constant.h  ConstantList.cpp  ConstantList.h  DatetimeConstant.cpp  DatetimeConstant.h  Expression.cpp  Expression.h  Ident.h  IdentList.cpp  IdentList.h  IndexNode.cpp  IndexNode.h  IntConstant.h  Node.h  NullConstant.cpp  Period.h  Query.h  RealConstant.cpp  RealConstant.h  RelExpr.cpp  RelExpr.h  SelectList.h  SysTime.h  TableIdent.cpp  TableIdent.h  TextConstant.h  Transaction.h  Variable.h  With.cpp  With.h
Server/Logic/Parser/RelationalOperationsParser/: Helper.cpp  Helper.h  Intersect.cpp  Intersect.h  Join.cpp  Join.h  Union.cpp  Union.h
Server/Logic/RelationalOperations/: Intersect.cpp  Join.cpp  Join.h  Union.h
Testing/: CMakeLists.txt
Testing/Tests/: AutoGenTests.cpp  CMakeLists.txt  Test.cpp  Test.h
Testing/Tests/Engine/: EngineTests.cpp
Testing/Tests/Logic/: LogicTests.cpp  ParserTests.cpp
Testing/TestsGenerator/: CMakeLists.txt  main.cpp
Tests/: AutoGenTests.cpp  CMakeLists.txt  FirstTest.cpp  FullTests.cpp  RequestGenerator.cpp  RequestGenerator.h  Test.cpp  Test.goyeod  Test.h  test.cpp  test.h
Tests/Engine/: EngineTests.cpp
Tests/Logic/: LogicTests.cpp  ParserTests.cpp
Tests/Parser/: CreateTable.cpp
TestsGenerator/: CMakeLists.txt  main.cpp
